--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,14 +26,15 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= '配送料負担' %>
+        ¥<%= '販売価格' %>
       </p>
     </div>
     <%# /支払額の表示 %>
 
-    <%= render 'error_messages', model: @order_address %>
+    <%= form_with  model: @order_address, url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %>
 
-    <%= form_with  model: @order_address, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
+
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
