--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -90,19 +90,26 @@
   <%# /コメントの表示 %>
 
   <div class="comment-box">
-    <form>
-      <textarea class="comment-text"></textarea>
+  <%# ログイン時の表示 %>
+  <% if user_signed_in? %>
+    <%= form_with model: [@item, @comment], id: "comment-form" do |f| %>
+      <%= f.text_area :text, class: "comment-text" %>
       <p class="comment-warn">
         相手のことを考え丁寧なコメントを心がけましょう。
         <br>
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
-      <button type="submit" class="comment-btn">
-        <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
-      </button>
-    </form>
+      <%= f.submit "コメントする", class: "comment-btn" %>
+      <%#= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
+    <% end%>
+  <%# /ログイン時の表示 %>
+  <%# ログアウト時の表示 %>
+  <% else %>
+    <%= link_to "ログインしてコメントする", new_user_session_path ,class:"comment-red-btn"%>
+  <%# /ログアウト時の表示 %>
+  <% end %>
   </div>
+
   <div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
